force-app/main/default/objects/CWS_BillingPeriod__c/CWS_BillingPeriod__c.object-meta.xml
<CustomObject>
    <label>Billing Period</label>
    <nameField>
        <label>Billing Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>