force-app/main/default/objects/CWS_BillingPeriod__c/fields/CWS_Account__c.field-meta.xml
<CustomField>
    <fullName>CWS_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the account associated with the billing period</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Periods</relationshipLabel>
    <relationshipName>Billing_Periods</relationshipName>
    <type>Lookup</type>
</CustomField>