force-app/main/default/objects/CWS_BillingPeriod__c/fields/CWS_Billing_Period_External_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Billing_Period_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Billing Period External ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>