force-app/main/default/objects/CWS_BillingPeriod__c/fields/CWS_CMSCommitAmount__c.field-meta.xml
<CustomField>
    <fullName>CWS_CMSCommitAmount__c</fullName>
    <inlineHelpText>Rollup summary of min commits</inlineHelpText>
    <label>CMS Commit Amount</label>
    <summarizedField>CWS_Minimum_Commit__c.CWS_WonCommitAmount__c</summarizedField>
    <summaryForeignKey>CWS_Minimum_Commit__c.CWS_Billing_Period__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>