force-app/main/default/objects/CWS_BillingPeriod__c/fields/CWS_CMSMinCommitCharge__c.field-meta.xml
<CustomField>
    <fullName>CWS_CMSMinCommitCharge__c</fullName>
    <inlineHelpText>Roll up summary of billing item where white space group = min commit charge</inlineHelpText>
    <label>CMS Min Commit Charge</label>
    <summarizedField>CWS_BillingItem__c.CWS_MRR__c</summarizedField>
    <summaryFilterItems>
        <field>CWS_BillingItem__c.CWS_WhiteSpaceGroup__c</field>
        <operation>equals</operation>
        <value>Min Commit Charge</value>
    </summaryFilterItems>
    <summaryForeignKey>CWS_BillingItem__c.CWS_BillingPeriod__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>