force-app/main/default/objects/CWS_BillingPeriod__c/fields/CWS_CMSMinCommitProductBilling__c.field-meta.xml
<CustomField>
    <fullName>CWS_CMSMinCommitProductBilling__c</fullName>
    <inlineHelpText>Roll up summary of billing item MRR</inlineHelpText>
    <label>CMS Min Commit Product Billing</label>
    <summarizedField>CWS_BillingItem__c.CWS_MRR__c</summarizedField>
    <summaryFilterItems>
        <field>CWS_BillingItem__c.CWS_IncludeinMinCommit__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>CWS_BillingItem__c.CWS_BillingPeriod__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>