force-app/main/default/objects/CWS_BillingPeriod__c/fields/CWS_CMSTotalBilling__c.field-meta.xml
<CustomField>
    <fullName>CWS_CMSTotalBilling__c</fullName>
    <inlineHelpText>Sum of billing items where the products are CMS</inlineHelpText>
    <label>CMS Total Billing</label>
    <summarizedField>CWS_BillingItem__c.CWS_MRR__c</summarizedField>
    <summaryFilterItems>
        <field>CWS_BillingItem__c.CWS_Source__c</field>
        <operation>equals</operation>
        <value>CMS</value>
    </summaryFilterItems>
    <summaryForeignKey>CWS_BillingItem__c.CWS_BillingPeriod__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>