force-app/main/default/objects/CWS_BillingPeriod__c/fields/CWS_CWTotalBilling__c.field-meta.xml
<CustomField>
    <fullName>CWS_CWTotalBilling__c</fullName>
    <inlineHelpText>Sum of billing items where the products are CW</inlineHelpText>
    <label>CW Total Billing</label>
    <summarizedField>CWS_BillingItem__c.CWS_MRR__c</summarizedField>
    <summaryFilterItems>
        <field>CWS_BillingItem__c.CWS_Source__c</field>
        <operation>equals</operation>
        <value>CW</value>
    </summaryFilterItems>
    <summaryForeignKey>CWS_BillingItem__c.CWS_BillingPeriod__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>