force-app/main/default/objects/CWS_BillingPeriod__c/fields/CWS_MinCommitFormula__c.field-meta.xml
<CustomField>
    <fullName>CWS_MinCommitFormula__c</fullName>
    <formula>CWS_CMSCommitAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min Commit Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>