force-app/main/default/objects/CWS_BillingPeriod__c/fields/CWS_MonthYear__c.field-meta.xml
<CustomField>
    <fullName>CWS_MonthYear__c</fullName>
    <inlineHelpText>Marks the month year of the billing period</inlineHelpText>
    <label>MonthYear</label>
    <length>100</length>
    <type>Text</type>
</CustomField>