force-app/main/default/objects/CWS_BillingPeriod__c/fields/CWS_of_Commit_Spend__c.field-meta.xml
<CustomField>
    <fullName>CWS_of_Commit_Spend__c</fullName>
    <formula>IF(CWS_CMSCommitAmount__c =0, 0, CWS_CMSMinCommitProductBilling__c / CWS_CMSCommitAmount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% of Commit Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>