force-app/main/default/objects/CWS_BillingPeriod__c/fields/CWS_PeriodStartDate__c.field-meta.xml
<CustomField>
    <fullName>CWS_PeriodStartDate__c</fullName>
    <inlineHelpText>Marks the start date for the billing period</inlineHelpText>
    <label>Period Start Date</label>
    <type>Date</type>
</CustomField>