force-app/main/default/objects/CWS_BillingPeriod__c/fields/CWS_TotalBillingItems__c.field-meta.xml
<CustomField>
    <fullName>CWS_TotalBillingItems__c</fullName>
    <label>Total Billing Items</label>
    <summaryForeignKey>CWS_BillingItem__c.CWS_BillingPeriod__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>