force-app/main/default/objects/CWS_BillingPeriod__c/fields/CWS_TotalBillings__c.field-meta.xml
<CustomField>
    <fullName>CWS_TotalBillings__c</fullName>
    <inlineHelpText>Calculates the total billing for that month/year period</inlineHelpText>
    <label>Total Billings</label>
    <summarizedField>CWS_BillingItem__c.CWS_MRR__c</summarizedField>
    <summaryForeignKey>CWS_BillingItem__c.CWS_BillingPeriod__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>