force-app/main/default/objects/CWS_BillingPeriod__c/fields/Days_Since_Billing_Period__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Billing_Period__c</fullName>
    <formula>TODAY()- CWS_PeriodStartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Billing Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>